--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,67 @@ body{
 	font-family: 'Open Sans', sans-serif;
 }
 
-.logo {
+.navbar {
+	width: 100%;
+	height: 75px;
+	background-color: #34495e;
 	text-align: center;
-	font-size: 63px;
 	font-weight: 700;
+	font-size: 24px;
+	padding-top: 35px;
+	
+}
+
+.navbar a {
+	text-decoration: none;
+	color: white;
+}
+
+.navbar a:hover {
+	color: #7f8c8d;
+}
+
+.logo {
+	width: 550px;
+	margin: 0 auto;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 72px;
+	font-weight: 700;
+	border: solid 2px #7f8c8d;
+	margin-top: 100px;
+}
+
+.form {
+	text-align: center;
+}
+
+#input-text {
+	background-color: white;
+	width: 300px;
+	height: 25px;
+}
+
+#submit  {
+	background-color: #3bd27a;
+	font-size: 12px;
+	text-transform: uppercase;
+	width: 130px;
+	height: 40px;
+	border: none;
+	color: white;
+	border-radius: 5px;
+	margin-top: 20px;
+}
+
+h1 {
+	color: #34495e;
+	text-transform: uppercase;
+}
+
+p {
+	color: #34495e;
+	width: 650px;
+	margin: 0 auto;
+	padding-bottom: 30px;
 }
