--- a/css/styles.css
+++ b/css/styles.css
@@ -76,3 +76,30 @@ p {
 	text-align: center;
 	color: #34495e;
 }
+
+#count {
+	text-align: center;
+}
+
+.guessBox {
+	background-color: #34495e;
+	height: 150px;
+	margin: 0 auto;
+	color: white;
+}
+
+.guessBox li {
+	list-style: none;
+	display: inline-block;
+	color: white;
+	padding-right: 10px;
+	margin-left: 10px;
+	padding-top: 5px;
+	text-align: center;
+}
+
+#guessList h3 {
+	text-align: center;
+	padding-right: -10px;
+	padding-top: 10px;
+}
